--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "@auth0/auth0-spa-js": "^1.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
