--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "onething",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://onebigthing.herokuapp.com//",
+  "proxy": "https://onebigthing.herokuapp.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
