--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "onething",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://onebigthing.herokuapp.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
@@ -19,6 +18,7 @@
     "@auth0/auth0-spa-js": "^1.6.4"
   },
   "scripts": {
+    "heroku-postbuild": "npm install",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
