--- a/package.json
+++ b/package.json
@@ -3,22 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.6.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "auth": "0.0.9",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jio": "^3.38.0",
+    "joi": "^14.3.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "@auth0/auth0-spa-js": "^1.6.4"
+    "react-use": "^13.26.4",
+    "react-use-auth": "^0.5.3"
   },
   "scripts": {
-    "heroku-postbuild": "npm install",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
