--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http": "0.0.0",
+    "https": "^1.0.0",
     "jio": "^3.38.0",
     "joi": "^14.3.1",
     "moment": "^2.24.0",
